# openrtb-rs

./: Cargo.toml  README.md
src/: lib.rs
src/core/: mod.rs
src/core/v2_6/: app.rs  audio.rs  banner.rs  bid.rs  bid_request.rs  bid_response.rs  brand.rs  channel.rs  content.rs  data.rs  deal.rs  defaults.rs  device.rs  dooh.rs  format.rs  geo.rs  impression.rs  metric.rs  mod.rs  native.rs  network.rs  pmp.rs  producer.rs  publisher.rs  regs.rs  seat_bid.rs  segment.rs  site.rs  source.rs  user.rs  user_agent.rs  video.rs
src/enums/: ad_position.rs  api_frameworks.rs  auction_type.rs  banner_ad_type.rs  companion_type.rs  connection_type.rs  content_context.rs  content_delivery.rs  content_taxonomy.rs  creative_attributes.rs  device_type.rs  expandable_direction.rs  feed_type.rs  flags.rs  location_service.rs  location_type.rs  loss_reason.rs  mod.rs  no_bid_reason.rs  playback_cessation.rs  playback_method.rs  production_quality.rs  qag_media_rating.rs  start_delay.rs  user_agent_source.rs  venue_taxonomy.rs  video_linearity.rs  video_placement.rs  video_protocols.rs  volume_normalization.rs
src/native/: mod.rs
src/native/v1_2/: mod.rs  request.rs  response.rs
src/v2_6/: app.rs  audio.rs  banner.rs  bid.rs  bid_request.rs  bid_response.rs  brand.rs  channel.rs  content.rs  deal.rs  defaults.rs  device.rs  dooh.rs  format.rs  geo.rs  impression.rs  mod.rs  native.rs  pmp.rs  producer.rs  regs.rs  seat_bid.rs  segment.rs  site.rs  source.rs  user.rs  user_agent.rs  video.rs
src/vast/: mod.rs
src/vast/v4_3/: ad.rs  ad_parameters.rs  category.rs  common.rs  (+17 more)
(+33 files in other folders)
