[package]
name = "openrtb"
version = "0.3.2"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hard-xml = { version = "1.41", optional = true }
thiserror = { version = "2.0", optional = true }
url = { version = "2.5", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
native = []
vast = ["dep:hard-xml", "dep:thiserror", "dep:url", "dep:chrono"]
