[package]
name = "openrtb"
version = "0.5.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
thiserror = { version = "2.0", optional = true }
url = { version = "2.5", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
native = []
vast = ["dep:quick-xml", "dep:thiserror", "dep:url", "dep:chrono"]
